src/objects/Twitter_API__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>App_Consumer_Key__c</fullName>
        <label>App Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Consumer_Seceret__c</fullName>
        <label>App Consumer Seceret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oath_2_Endpoint__c</fullName>
        <label>Oath 2 Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Timeline_Endpoint__c</fullName>
        <label>User Timeline Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Twitter_API</label>
</CustomObject>